kubernetes/customers.yml
apiVersion: v1
kind: Service
metadata:
  name: customers
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: customers
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customers
spec:
  selector:
    matchLabels:
      app: customers
  replicas: 1
  template:
    metadata:
      labels:
        app: customers
    spec:
      containers:
      - name: customers
        image: xvincentx/apigatewayplayground_customers:gateway-request-response-modification
